[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Misc/MiscChangeLog.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Resources/Xolonium-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Fonts/Text33.tres" type="DynamicFont" id=3]
[ext_resource path="res://Scenes/Prefab/BasicColorBg.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Prefab/TopFixed.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
size = 43
font_data = ExtResource( 2 )

[node name="Panel" type="CenterContainer"]
margin_right = 720.0
margin_bottom = 1280.0
rect_min_size = Vector2( 720, 1280 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BasicBg" parent="." instance=ExtResource( 4 )]
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 720.0
margin_bottom = 1280.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 720.0
margin_bottom = 1280.0
rect_min_size = Vector2( 720, 1280 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TopFixed" parent="VBoxContainer" instance=ExtResource( 5 )]

[node name="Menu0" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 64.0
margin_right = 720.0
margin_bottom = 122.0

[node name="fixed" type="Control" parent="VBoxContainer/Menu0"]
margin_right = 10.0
margin_bottom = 58.0
rect_min_size = Vector2( 10, 0 )

[node name="BtnBack" type="Button" parent="VBoxContainer/Menu0"]
margin_left = 14.0
margin_right = 138.0
margin_bottom = 58.0
custom_fonts/font = SubResource( 1 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="space" type="Control" parent="VBoxContainer/Menu0"]
margin_left = 142.0
margin_right = 578.0
margin_bottom = 58.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BtnWill" type="Button" parent="VBoxContainer/Menu0"]
margin_left = 582.0
margin_right = 706.0
margin_bottom = 58.0
rect_min_size = Vector2( 124, 0 )
custom_fonts/font = SubResource( 1 )
text = "Will"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fixed2" type="Control" parent="VBoxContainer/Menu0"]
margin_left = 710.0
margin_right = 720.0
margin_bottom = 58.0
rect_min_size = Vector2( 10, 0 )

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 126.0
margin_right = 720.0
margin_bottom = 1280.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 710.0
margin_bottom = 1144.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "# Change log

## 0.02(10)

- [ChangeLog] opt display.
- [Panel] opt multiple resolutions.

## 0.02(9)

- [MathScore] fix display bug.
- [Main] impl change log.

## 0.02(8)

- [MathMul] impl score."
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_down" from="VBoxContainer/Menu0/BtnBack" to="." method="_on_BtnBack_button_down"]
[connection signal="button_down" from="VBoxContainer/Menu0/BtnWill" to="." method="_on_BtnWill_button_down"]
